New readme for version 0.50