@@ -56,7 +56,7 @@ Add the doclet to your Maven Javadoc plugin configuration
      <docletArtifact>
        <groupId>org.apidesign.javadoc</groupId>
        <artifactId>codesnippet-doclet</artifactId>
-       <version>0.50</version> <!-- or any newer version -->
+       <version>0.30</version> <!-- or any newer version -->
      </docletArtifact>
      <!-- if you want to reference snippets from your test directory, also include -->
      <additionalparam>-snippetpath src/test/java</additionalparam>
@@ -74,7 +74,7 @@ configurations {
 }
 
 dependencies {
-    snippetdoclet group: 'org.apidesign.javadoc', name: 'codesnippet-doclet', version: '0.50'
+    snippetdoclet group: 'org.apidesign.javadoc', name: 'codesnippet-doclet', version: '0.31'
 }
 
 javadoc {
@@ -84,11 +84,31 @@ javadoc {
 }
 ```
 
-## Use with JDK11, JDK13 & co.
+## Use with JDK9+
 
-The Codesnippet doclet supports JDK11, JDK13 and newer as well as JDK8. The old
-Javadoc API has been removed in JDK13, but it seems I found a way
-to support older as well as new style.
+The Codesnippet doclet supports JDK9+ and newer as well as JDK8. There have
+been major changes to the javadoc API in JDK9, but it seems I found a way
+to support older as well as new style. In order to use the doclet on
+JDK9+ it may however be necessary to open up one implementation package and
+pass `-J--add-opens=jdk.javadoc/com.sun.tools.javadoc.main=ALL-UNNAMED` parameter
+when invoking the `javadoc` command.
+In case of Maven [one can do](https://github.com/jtulach/codesnippet4javadoc/commit/056ce1e78a95e2540ab81b0d973d7ce655029148)
+it like this:
+```xml
+<configuration>
+    <doclet>org.apidesign.javadoc.codesnippet.Doclet</doclet>
+    <docletArtifact>
+        <groupId>org.apidesign.javadoc</groupId>
+        <artifactId>codesnippet-doclet</artifactId>
+        <version>0.30</version>
+    </docletArtifact>
+    <additionalJOptions>
+        <opt>-J--add-opens=jdk.javadoc/com.sun.tools.javadoc.main=ALL-UNNAMED</opt>
+    </additionalJOptions>
+</configuration>
+```
+The doclet can run without the opened package, but some features (like copying
+`doc-files`) may not work properly.
 
 ## Use with Command Line Javadoc Tool
 
